# srch2-ngn

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  eclipse-bootstrap.sh  readme.txt  runme-to-init-env.sh  setup-readme.txt
db_connectors/: CMakeLists.txt  DataConnector.h
db_connectors/include/: config.h  version.h
db_connectors/include/base/: error_codes.h
db_connectors/mongo/: mongodbconnector.cpp  mongodbconnector.h  readme.txt
db_connectors/mysql/: mysqlEventHandler.cpp  mysqlEventHandler.h  mysqlconnector.cpp  mysqlconnector.h  readme.txt
db_connectors/oracle/: conf.xml  oracleconnector.cpp  oracleconnector.h  readme.txt
db_connectors/sqlite/: Readme.txt  readme.txt  sqlite3.h  sqliteconnector.cpp  sqliteconnector.h
db_connectors/sqlserver/: readme.txt  sqlserverconnector.cpp  sqlserverconnector.h  srch2-install-sqlserver-odbc-centos.sh  srch2-install-sqlserver-odbc-ubuntu.sh
db_connectors/util/: Logger.h  io.cpp  io.h
include/instantsearch/: Analyzer.h  Analyzer.h.orig  CMakeLists.txt  Constants.h  DateTime.h  DynamicScoringFilter.h  FacetedSearchFilter.h  GlobalCache.h  IndexSearcher.h  Indexer.h  LogicalPlan.h  NonSearchableAttributeExpressionFilter.h  Query.h  QueryEvaluator.h  QueryResults.h  RangeQueryFilter.h  Ranker.h  Record.h  RefiningAttributeExpressionFilter.h  ResultsPostProcessor.h  Schema.h  Score.h  SortFilter.h  Stat.h  Term.h  TypedValue.h  platform.h
src/adapter/: CMakeLists.txt  DataConnector.cpp  DataConnector.h  DataConnectorFactory.cpp  DataConnectorFactory.h  DataConnectorInternal.cpp  DataConnectorInternal.h  DataConnectorThread.cpp  DataConnectorThread.h  ServerInterfaceInternal.cpp  ServerInterfaceInternal.h
src/core/: CMakeLists.txt
src/core/analyzer/: Analyzer.cpp  Analyzer.cpp.orig  AnalyzerContainers.cpp  AnalyzerContainers.h  AnalyzerFactory.cpp  AnalyzerFactory.h  AnalyzerInternal.cpp  AnalyzerInternal.cpp.orig  AnalyzerInternal.h  AnalyzerInternal.h.orig  AnalyzerInternalold.cpp  AnalyzerInternalold.cpp.orig  AnalyzerInternalold.h  AnalyzerInternalold.h.orig  CharSet.cpp  CharSet.h  ChineseAnalyzer.cpp  ChineseAnalyzer.h  ChineseTokenizer.cpp  ChineseTokenizer.h  Dictionary.cpp  Dictionary.h  LowerCaseFilter.cpp  LowerCaseFilter.h  NonAlphaNumericFilter.cpp  NonAlphaNumericFilter.h  Normalizer.cpp  Normalizer.cpp.orig  Normalizer.h  Normalizer.h.orig  SharedToken.h  SimpleAnalyzer.cpp  SimpleAnalyzer.cpp.orig  SimpleAnalyzer.h  SimpleAnalyzer.h.orig  StandardAnalyzer.cpp  StandardAnalyzer.cpp.orig  StandardAnalyzer.h  StandardAnalyzer.h.orig  StandardTokenizer.cpp  (+18 more)
src/core/geo/: BuildGeoIndex.cpp  FilterIndex.h  QuadNode.cpp  QuadNodeInternalStructures.cpp  QuadNodeInternalStructures.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  SearchGeoIndex.cpp
src/core/geosearch/: QTree.cpp  QTree.h  QTreeNode.cpp  QTreeNode.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h
src/core/highlighter/: Highlighter.cpp  Highlighter.h  ServerHighLighter.cpp  ServerHighLighter.h
src/core/index/: FeedbackIndex.cpp  FeedbackIndex.h  ForwardIndex.cpp  ForwardIndex.h  IndexUtil.cpp  IndexUtil.h  InvertedIndex.cpp  InvertedIndex.h  InvertedListElement.h  Trie.cpp  Trie.h
src/core/license/: LicenseVerifier.cpp  LicenseVerifier.h  base64.cpp  base64.h
src/core/operation/: AccessControl.cpp  AccessControl.h  ActiveNode.cpp  ActiveNode.h  AttributeAccessControl.cpp  AttributeAccessControl.h  Cache.cpp  Cache.h  CacheBase.h  CacheManager.cpp  CacheManager.h  CatalogManager.cpp  CatalogManager.h  GlobalCache.cpp  HistogramManager.cpp  HistogramManager.h  IndexData.cpp  IndexData.cpp.orig  IndexData.h  IndexData.h.orig  IndexHealthInfo.h  IndexSearcher.cpp  IndexSearcherInternal.cpp  IndexSearcherInternal.h  Indexer.cpp  IndexerInternal.cpp  IndexerInternal.h  IndexerInternal.h.orig  PhraseSearcher.cpp  PhraseSearcher.h  PhysicalPlanRecordItemFactory.h  QueryEvaluator.cpp  QueryEvaluatorInternal.cpp  QueryEvaluatorInternal.h  QueryOptimizer.cpp  QueryOptimizer.h  (+5 more)
src/java/: CMakeLists.txt  RefiningInteger.h  RefiningInteger.java
src/server/: AnalyzerFactory.cpp  AnalyzerFactory.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  HTTPJsonResponse.cpp  HTTPJsonResponse.h  HTTPJsonResponseConstants.h  HTTPRequestHandler.cpp  HTTPRequestHandler.h  IndexWriteUtil.cpp  IndexWriteUtil.h  JSONRecordParser.cpp  JSONRecordParser.h  MongodbAdapter.cpp  MongodbAdapter.h  ServerHighLighter.cpp  ServerHighLighter.h  Srch2Server.cpp  Srch2Server.h  Srch2ServerExternalGateway.cpp  Srch2ServerExternalGateway.h  Srch2ServerRuntime.cpp  Srch2ServerRuntime.h  bimapleSearchServer.cpp  srch2SearchServer.cpp  srch2SearchServer.txt  tmpShardGenerator.cpp
src/sharding/: CMakeLists.txt
src/wrapper/: AnalyzerFactory.cpp  AnalyzerFactory.h  BimapleKafkaConsumer.cpp  BimapleKafkaConsumer.h  BimapleServer.cpp  BimapleServer.h  BimapleServerConf.cpp  BimapleServerConf.h  BimapleServerLogger.cpp  BimapleServerLogger.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DateAndTimeHandler.cpp  DateAndTimeHandler.h  FilterQueryEvaluator.h  HTTPRequestHandler.cpp  HTTPRequestHandler.h  HTTPResponse.cpp  HTTPResponse.h  IndexWriteUtil.h  JSONRecordParser.cpp  JSONRecordParser.h  MongodbAdapter.cpp  MongodbAdapter.h  ParsedParameterContainer.h  ParserUtility.cpp  ParserUtility.h  QueryBuilder.cpp  QueryBuilder.h  QueryExecutor.cpp  QueryExecutor.h  QueryFieldBoostParser.cpp  QueryFieldBoostParser.h  QueryParser.cpp  QueryParser.h  QueryPlan.h  QueryPlanGen.cpp  QueryPlanGen.h  QueryRewriter.cpp  (+24 more)
test/: CMakeLists.txt  CMakeLists.txt.orig
test/core/: CMakeLists.txt
test/tmp/: confA.xml  confB.xml  confC.xml
test/wrapper/: CMakeLists.txt  Daemon.cpp  DaemonHTTPServer.cpp  WrapperCreateIndexFromFile_Test.cpp  WrapperCreateIndexFromFile_Test.cpp.orig  a1_load_test_for_wirte_api.jmx  bimaple_stress_test-new.jmx  bimaple_stress_test.jmx  conf.ini-WrapperCreateIndexFromJsonFile_Test  readme.txt  testJSON.cpp  testKafka.cpp  test_bimaple_top_k.py  words.csv
utilities/dictionary-builder/: CMakeLists.txt  README.txt
(+2899 files in other folders)
